Changed category to genre and added director

--- a/additem.html
+++ b/additem.html
@@ -17,10 +17,10 @@ Term: 1107
 		<h1>Add Movie</h1>
 		<form action="" method="post">
 			<fieldset>
-				<legend>Select Category</legend> <!-- Drop down box to select a movie category -->
-				<label for="category">Categories: </label>
-				<select id="category"> <!-- select -->
-					<optgroup label="">
+				<legend>Select Genre</legend> <!-- Drop down box to select a movie category -->
+				<label for="genre">Movie Genre: </label>
+				<select id="genre"> <!-- select -->
+					<optgroup label="Genres">
 						<option value="comedy">Comedy</option> <!-- options -->
 						<option value="drama">Drama</option>
 						<option value="action">Action</option>
@@ -40,6 +40,8 @@ Term: 1107
 					<input type="text" id="title" /></li> <!-- text field -->
 					<li><label for="actor">Main Actor/Actress:</label><br />
 					<input type="text" id="actor" /></li> <!-- text field -->
+					<li><label for="director">Director:</label><br />
+					<input type="text" id="director" /></li> <!-- text field -->
 					<li><label for="rating">Rating:</label><br />
 					<input type="range" min="1" max="5" id="rating" /></li> <!-- range field -->
 					<li><label for="favorites">Add to favorites?</label><br />
